Fixed Navi Bar Spacing

--- a/css/style.css
+++ b/css/style.css
@@ -287,6 +287,13 @@ a.button.contact:hover {
   .navtoggle li:last-child {
     display: none;
   }
+  .navtoggle.responsive nav {
+    padding: 0px;
+  }
+  .navtoggle.responsive li {
+    padding: 0px;
+    border-top: 0px;
+  }
   #main {
     padding-top: 170px;
   }
